--- a/lamp-php56-mysql56/.env
+++ b/lamp-php56-mysql56/.env
@@ -10,5 +10,5 @@ COMPOSE_WEB_PORT="8080:80"
 COMPOSE_MYSQL_PORT="3000:3306"
 COMPOSE_PHPMYADMIN_PORT="5000:80"
 
-COMPOSE_APACHE_RUN_USER=#1000
-COMPOSE_APACHE_RUN_GROUP=#1000
+COMPOSE_APACHE_RUN_USER=1000
+COMPOSE_APACHE_RUN_GROUP=1000
