--- a/lamp-php74-mysql57/docker-compose.yml
+++ b/lamp-php74-mysql57/docker-compose.yml
@@ -16,10 +16,11 @@ services:
     ports:
       - ${COMPOSE_WEB_PORT}
     environment:
-      - APACHE_RUN_USER=${COMPOSE_APACHE_RUN_USER}#1000
-      - APACHE_RUN_GROUP=${COMPOSE_APACHE_RUN_GROUP}#1000
+      - APACHE_RUN_USER=#${COMPOSE_APACHE_RUN_USER}
+      - APACHE_RUN_GROUP=#${COMPOSE_APACHE_RUN_GROUP}
     # imposta l'hostname (come ritornato da gethostname()) INTERNAMENTE AL CONTAINER. Non ha effetto all'esterno
     hostname: ${COMPOSE_PROJECT_NAME}.localhost
+    user : ${COMPOSE_APACHE_RUN_USER} 
   db:
     image: mysql:5.7
     restart: "no"
