--- a/lamp-php74-mysql57/docker-compose.yaml
+++ b/lamp-php74-mysql57/docker-compose.yaml
@@ -1,5 +1,5 @@
 #
-# ' docker-compose -f docker-compose.yml up'
+# 'docker-compose up'
 #
 
 version: "3"
@@ -7,20 +7,26 @@ version: "3"
 services:
   web:
     build:
-      dockerfile: docker-compose-php.dockerfile
+      dockerfile: docker-php.dockerfile
       context: .
     restart: "no"
     volumes:
       - ".:/var/www/html"
       - "./docker-data/log:/var/log/apache2"
+      - "./docker-data/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini"
     ports:
       - ${COMPOSE_WEB_PORT}
     environment:
-      - APACHE_RUN_USER=#${COMPOSE_APACHE_RUN_USER}
-      - APACHE_RUN_GROUP=#${COMPOSE_APACHE_RUN_GROUP}
-    # imposta l'hostname (come ritornato da gethostname()) INTERNAMENTE AL CONTAINER. Non ha effetto all'esterno
+      # lasciare "#"
+      - APACHE_RUN_USER=#${MY_USER_ID}
+      - APACHE_RUN_GROUP=#${MY_USER_ID}
+      # passo id utente per creare un nuovo utente nel container
+      - MY_USER_ID=${MY_USER_ID}
+
+      # imposta l'hostname (come ritornato da gethostname()) INTERNAMENTE AL CONTAINER. Non ha effetto all'esterno
     hostname: ${COMPOSE_PROJECT_NAME}.localhost
-    user : ${COMPOSE_APACHE_RUN_USER} 
+    # utente default di esecuzione dei comandi nel container, utilizza utente del sistema host (es. bash)
+    user : ${MY_USER_ID}
   db:
     image: mysql:5.7
     restart: "no"
@@ -33,6 +39,11 @@ services:
       - ./docker-data/mysql:/var/lib/mysql
     ports:
       - ${COMPOSE_MYSQL_PORT} 
+  composer_install:
+    image : composer:2
+    command: ["composer", "install"]
+    volumes:
+      - "./:/app"
   # raggiungibile su {hostname}:5000
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:5
