--- a/lamp-php74-mysql57/.env
+++ b/lamp-php74-mysql57/.env
@@ -11,3 +11,9 @@ COMPOSE_MYSQL_PORT="3000:3306"
 COMPOSE_PHPMYADMIN_PORT="5000:80"
 
 MY_USER_ID=1000
+
+# porta browsersync (deve coincidere con porta esterna del container node)
+MIX_BROWSERSYNC_PORT='8848'
+# proxy per borwsersyn dentro al container node (deve coincidere con quella host in COMPOSE_WEB_PORT)
+MIX_BROWSERSYNC_PROXY='http://host.docker.internal:8080'
+MIX_NODE_ENV=production
