--- a/lamp-php80-mysql57/.env
+++ b/lamp-php80-mysql57/.env
@@ -4,7 +4,6 @@ DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
-
 #################### START DOCKER CONFIG
 COMPOSE_PROJECT_NAME=myproject
 # mappatura delle porte host -> docker (per eseguire siti multipli contemporanemente impostare porte diverse nell'host)
@@ -17,7 +16,7 @@ COMPOSE_APACHE_RUN_USER=1000
 COMPOSE_APACHE_RUN_GROUP=www-data
 
 # porta browsersync (deve coincidere con porta esterna del container node)
-MIX_BROWSERSYNC_PORT='8848'
+MIX_BROWSERSYNC_PORT=8848
 # proxy per borwsersyn dentro al container node (deve coincidere con quella host in COMPOSE_WEB_PORT)
 MIX_BROWSERSYNC_PROXY='http://host.docker.internal:8080'
 MIX_NODE_ENV=production
