--- a/lamp-php74-mysql57/docker-compose.yaml
+++ b/lamp-php74-mysql57/docker-compose.yaml
@@ -7,26 +7,23 @@ version: "3"
 services:
   web:
     build:
-      dockerfile: docker-php.dockerfile
       context: .
+      dockerfile: docker-php.dockerfile
+      args:
+        - APACHE_RUN_USER=${COMPOSE_APACHE_RUN_USER}
+        - APACHE_RUN_GROUP=${COMPOSE_APACHE_RUN_GROUP}
     restart: "no"
     volumes:
       - ".:/var/www/html"
       - "./docker-data/log:/var/log/apache2"
-      - "./docker-data/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini"
+      - "./docker-data/php/php.ini:/usr/local/etc/php/conf.d/custom.ini"
     ports:
       - ${COMPOSE_WEB_PORT}
-    environment:
-      # lasciare "#"
-      - APACHE_RUN_USER=#${MY_USER_ID}
-      - APACHE_RUN_GROUP=#${MY_USER_ID}
-      # passo id utente per creare un nuovo utente nel container
-      - MY_USER_ID=${MY_USER_ID}
 
       # imposta l'hostname (come ritornato da gethostname()) INTERNAMENTE AL CONTAINER. Non ha effetto all'esterno
     hostname: ${COMPOSE_PROJECT_NAME}.localhost
     # utente default di esecuzione dei comandi nel container, utilizza utente del sistema host (es. bash)
-    user : ${MY_USER_ID}
+    user : ${COMPOSE_APACHE_RUN_USER}
   db:
     image: mysql:5.7
     restart: "no"
@@ -56,14 +53,11 @@ services:
     ports:
       - ${COMPOSE_PHPMYADMIN_PORT}
   node:
-      image : node:12
-      command: >
-        sh -c "npm install &&
-              export NODE_ENV=${MIX_NODE_ENV} &&
-              npm run watch
-              "
-      volumes:
-        - "./:/app"
-      working_dir: /app
-      ports:
-        - ${MIX_BROWSERSYNC_PORT}:${MIX_BROWSERSYNC_PORT}
+    image : node:12
+    command: >
+      sh -c "npm install --save-dev && npm run watch"
+    volumes:
+      - "./:/app"
+    working_dir: /app
+    ports:
+      - ${MIX_BROWSERSYNC_PORT}:${MIX_BROWSERSYNC_PORT}
