--- a/lamp-php81-mysql57/.vscode/settings.json
+++ b/lamp-php81-mysql57/.vscode/settings.json
@@ -4,7 +4,11 @@
             {
                 "match": ".php",
                 "cmd": "./docker-fw /var/www/html/tools/php-cs-fixer/vendor/friendsofphp/php-cs-fixer/php-cs-fixer --using-cache=no --format=json fix ${relativeFile}"
-            }
+            },
+            {
+              "match": ".php",
+					    "cmd": "./docker-fw /var/www/html/vendor/bin/phpstan analyse ${relativeFile}"
+				    }
         ]
     },
     "php.validate.executablePath": "./docker-php-validate",
