Updated php 8.1 stack

--- a/lamp-php81-mysql57/.env
+++ b/lamp-php81-mysql57/.env
@@ -11,6 +11,8 @@ COMPOSE_PROJECT_NAME=myproject
 COMPOSE_WEB_PORT=8080:80
 COMPOSE_MYSQL_PORT=3000:3306
 COMPOSE_PHPMYADMIN_PORT=5000:80
+COMPOSE_MAILHOG_PORT_1=1025:1025
+COMPOSE_MAILHOG_PORT_2=8100:8025
 
 # id utenti di esecuzione per apache 
 COMPOSE_APACHE_RUN_USER=1000
