--- a/lamp-php81-mysql57/.vscode/settings.json
+++ b/lamp-php81-mysql57/.vscode/settings.json
@@ -1,26 +1,44 @@
 {
-    // phpstan.* settings for sanderronde.phpstan-vscode to run phpstan inside a docker container
-    // (using the correct php versions)
-    "phpstan.binCommand": [
-        "docker", "exec", "{$containerName}", "vendor/bin/phpstan"
-    ],
-    "phpstan.configFile": ".phpstan.neon",
-    "phpstan.enableLanguageServer": false,
-    "phpstan.binPath": "",
-    "phpstan.paths": {
-        "{$absolutePathToProject}": "/var/www/html"
-    },
-    "phpstan.timeout": 100000,
-
-    // run php-cs-fixer inside a docker container through the extension emeraldwalk.runonsave
-    "emeraldwalk.runonsave": {
-        "commands": [
-            {
-                "match": ".php",
-                "isAsync": true,
-                "cmd": "docker exec -i {$containerName} /var/www/html/tools/php-cs-fixer/vendor/bin/php-cs-fixer fix /var/www/html/${relativeFile}"
-            }
-        ]
-    }
-
-}
+    // settings template for a project root directory on wsl folder with docker ce running natively on wls  
+    
+      // Extensions installed on WSL
+      // bmewburn.vscode-intelephense-client
+      // emeraldwalk.RunOnSave
+      // Gruntfuggly.todo-tree
+      // MehediDracula.php-namespace-resolver
+      // mhutchie.git-graph
+      // ms-azuretools.vscode-docker
+      // onecentlin.laravel-blade
+      // SanderRonde.phpstan-vscode
+      // vscode.docker (bundled) 
+      // vscode.yaml (bundled)
+      
+    
+      // phpstan.* settings for sanderronde.phpstan-vscode to run phpstan inside a docker container
+      // (using the correct php versions)
+      // replace {$containerName} with real container name
+      // replace $hostPathToTheProjectRoot with absolute path of project 
+      "phpstan.binCommand": [
+          "docker", "exec", "{$containerName}", "vendor/bin/phpstan"
+      ],
+      "phpstan.configFile": ".phpstan.neon",
+      "phpstan.enableLanguageServer": false,
+      "phpstan.binPath": "",
+      "phpstan.paths": {
+          "$hostPathToTheProjectRoot": "/var/www/html"
+      },
+      "phpstan.timeout": 100000,
+  
+      // run php-cs-fixer inside a docker container through the extension emeraldwalk.runonsave
+      // replace {$containerName} with real container name
+      "emeraldwalk.runonsave": {
+          "commands": [
+              {
+                  "match": ".php",
+                  "isAsync": true,
+                  "cmd": "docker exec -i {$containerName} /var/www/html/tools/php-cs-fixer/vendor/bin/php-cs-fixer fix /var/www/html/${relativeFile}"
+              }
+          ]
+      }
+  }
+  
