--- a/lamp-php81-mysql57/.env
+++ b/lamp-php81-mysql57/.env
@@ -1,16 +1,10 @@
-DB_HOST=db
-DB_PORT=3306
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
-
-
-#################### START DOCKER CONFIG
+###################################################################
+###################### DOCKER COMPOSE CONFIG ######################
 COMPOSE_PROJECT_NAME=myproject
 # mappatura delle porte host -> docker (per eseguire siti multipli contemporanemente impostare porte diverse nell'host)
-COMPOSE_WEB_PORT=8080:80
-COMPOSE_MYSQL_PORT=3000:3306
-COMPOSE_PHPMYADMIN_PORT=5000:80
+COMPOSE_WEB_PORT=8001:80
+COMPOSE_MYSQL_PORT=3001:3306
+COMPOSE_PHPMYADMIN_PORT=5001:80
 COMPOSE_MAILHOG_PORT_1=1025:1025
 COMPOSE_MAILHOG_PORT_2=8100:8025
 
@@ -19,8 +13,19 @@ COMPOSE_APACHE_RUN_USER=1000
 COMPOSE_APACHE_RUN_GROUP=www-data
 
 # porta browsersync (deve coincidere con porta esterna del container node)
-MIX_BROWSERSYNC_PORT='8848'
-# proxy per borwsersyn dentro al container node (deve coincidere con quella host in COMPOSE_WEB_PORT)
-MIX_BROWSERSYNC_PROXY='http://host.docker.internal:8080'
-MIX_NODE_ENV=production
-#################### END DOCKER CONFIG
+MIX_BROWSERSYNC_PORT=8848
+# in ambiente windows, proxy per browsersync dentro al container node (deve coincidere con quella host in COMPOSE_WEB_PORT)
+#MIX_BROWSERSYNC_PROXY='http://host.docker.internal:8080'
+# in ambiente linux,  proxy per browsersync dentro al container node 
+MIX_BROWSERSYNC_PROXY='http://{web_container_name}'
+###################### DOCKER COMPOSE CONFIG ######################
+###################################################################
+
+
+DB_CONNECTION=mysql
+DB_HOST=${COMPOSE_PROJECT_NAME}_db
+DB_PORT=3306
+DB_DATABASE=${COMPOSE_PROJECT_NAME}
+DB_USERNAME=${COMPOSE_PROJECT_NAME}_usr
+DB_PASSWORD=12345678
+
