--- a/lamp-php81-mysql57/.env
+++ b/lamp-php81-mysql57/.env
@@ -18,6 +18,9 @@ MIX_BROWSERSYNC_PORT=8848
 #MIX_BROWSERSYNC_PROXY='http://host.docker.internal:8080'
 # in ambiente linux,  proxy per browsersync dentro al container node 
 MIX_BROWSERSYNC_PROXY='http://{web_container_name}'
+
+COMPOSE_VIRTUAL_HOST=${COMPOSE_PROJECT_NAME}.localhost
+COMPOSE_EXTERNAL_NETWORK=nginx-proxy_default
 ###################### DOCKER COMPOSE CONFIG ######################
 ###################################################################
 
