--- a/lamp-php81-mysql57/.env
+++ b/lamp-php81-mysql57/.env
@@ -26,9 +26,9 @@ COMPOSE_EXTERNAL_NETWORK=nginx-proxy_default
 
 
 DB_CONNECTION=mysql
-DB_HOST=${COMPOSE_PROJECT_NAME}_db
+DB_HOST=myproject_db
 DB_PORT=3306
-DB_DATABASE=${COMPOSE_PROJECT_NAME}
-DB_USERNAME=${COMPOSE_PROJECT_NAME}_usr
+DB_DATABASE=myproject
+DB_USERNAME=myproject_usr
 DB_PASSWORD=12345678
 
