--- a/lamp-php81-mysql57/docker-compose.yaml
+++ b/lamp-php81-mysql57/docker-compose.yaml
@@ -11,21 +11,30 @@ services:
       context: .
       dockerfile: docker-php.dockerfile
       args:
+        # lasciare "#"
         - APACHE_RUN_USER=${COMPOSE_APACHE_RUN_USER}
         - APACHE_RUN_GROUP=${COMPOSE_APACHE_RUN_GROUP}
+    entrypoint: ["/bin/sh","-c"]
+    command: 
+      - |
+        composer install
+        php artisan migrate
+        apache2-foreground
     restart: "no"
     volumes:
       - ".:/var/www/html"
       - "./docker-data/log:/var/log/apache2"
-      - "./docker-data/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini"
+      - "./docker-data/php/php.ini:/usr/local/etc/php/conf.d/custom.ini"
     ports:
       - ${COMPOSE_WEB_PORT}
+
       # imposta l'hostname (come ritornato da gethostname()) INTERNAMENTE AL CONTAINER. Non ha effetto all'esterno
     hostname: ${COMPOSE_PROJECT_NAME}.localhost
     # utente default di esecuzione dei comandi nel container, utilizza utente del sistema host (es. bash)
-    user: ${COMPOSE_APACHE_RUN_USER}
+    user : ${COMPOSE_APACHE_RUN_USER}
     environment:
-      - VIRTUAL_HOST=${COMPOSE_VIRTUAL_HOST}
+      - VIRTUAL_HOST=${COMPOSE_VIRTUAL_HOST:-}
+      - 'COMPOSER_AUTH={"github-oauth": {"github.com": "${GH_AUTH_TOKEN:-}"}}'
     networks:
       - default
       - _external_
@@ -42,24 +51,20 @@ services:
       - ./docker-data/mysql:/var/lib/mysql
     ports:
       - ${COMPOSE_MYSQL_PORT} 
-  composer_install:
-    image : composer:2
-    command: ["composer", "install"]
-    volumes:
-      - "./:/app"
   # raggiungibile su {hostname}:5000
   phpmyadmin:
     container_name: ${COMPOSE_PROJECT_NAME}_pma
     image: phpmyadmin/phpmyadmin:5
     restart: "no"
     environment:
-      PMA_HOST: db
+      PMA_HOST: ${COMPOSE_PROJECT_NAME}_db
       PMA_USER: root
       PMA_PASSWORD: secret
       UPLOAD_LIMIT : 200000000
     ports:
       - ${COMPOSE_PHPMYADMIN_PORT}
   node:
+    container_name: ${COMPOSE_PROJECT_NAME}_node
     image : node:12
     command: >
       sh -c "npm install --save-dev && npm run watch"
@@ -77,5 +82,5 @@ services:
       - ${COMPOSE_MAILHOG_PORT_2}
 networks:
   _external_:
-    external:
-        name: ${COMPOSE_EXTERNAL_NETWORK}
+    name : ${COMPOSE_EXTERNAL_NETWORK}
+    external: true
